--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 
-    <link rel="stylesheet" href="https://indestructible-type.github.io/fonts/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href='https://indestructible-type.github.io/fonts/stylesheet.css' type="text/css" charset="utf-8" />
     <link rel='stylesheet' href='style.css'/>
 	</head>
 	<body>
