--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
 		<title>Owen Earl Official Site</title>
 
 
 
-    <link rel="stylesheet" href='https://indestructible-type.github.io/fonts/stylesheet.css' type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href='http://indestructibletype.com/fonts/stylesheet.css' type="text/css" charset="utf-8" />
     <link rel='stylesheet' href='style.css'/>
 	</head>
 	<body>
