--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<title>Owen Earl Official Site</title>
-	<link rel="stylesheet" href='http://indestructibletype.com/fonts/stylesheet.css' type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href='https://indestructibletype.com/fonts/stylesheet.css' type="text/css" charset="utf-8" />
     	<link rel='stylesheet' href='style.css'/>
   </head>
   <body>
