--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     	<link rel='stylesheet' href='style.css'/>
   </head>
   <body>
-	<h1>Coming Soon!</h1>
+	<h1>Owen Earl</h1>
+	<h2>I make things.</h2>
   </body>
 </html>
