--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html>
   <head>
 	<title>Owen Earl Official Site</title>
-	<link rel="stylesheet" href='https://indestructibletype-fonthosting.github.io/renner.css' type="text/css" charset="utf-8" />
-    	<link rel='stylesheet' href='style.css'/>
+	<link rel="stylesheet" href="https://indestructibletype-fonthosting.github.io/renner.css" type="text/css" charset="utf-8" />
+    	<link rel="stylesheet" href="style.css"/>
   </head>
   <body>
 	<h1>Owen Earl</h1>
+	<div id="twitter_update_list">
+	</div>
+	<script type="text/javascript" src="http://twitter.com/javascripts/blogger.js">
+	</script>
+	<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/EwonRael.json?callback=twitterCallback2&count=1">
+	</script>
 	<h2>I make things.</h2>
+	<p>
+		<b>Recent Activity<b>
+	</p>
+	<p>
+		<a href="http://activities-index.github.io/">Activities Index</a>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
+	</p>
+	<p>
+		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
+	</p>
+	<p>
+		<a href="https://youtu.be/ohoT8Cdd6mI">Song to my Twitter Followers</a>
+	</p>
   </body>
 </html>
