--- a/index.html
+++ b/index.html
@@ -21,5 +21,14 @@
 	<p>
 		<a href="https://youtu.be/ohoT8Cdd6mI">Song to my Twitter Followers</a>
 	</p>
+	        <script src="https://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
+        <script src="https://twitter.com/statuses/user_timeline/EwonRael.json?callback=twitterCallback2&count=1" type="text/javascript"></script>
+	        <div id="twitter_t"></div>
+        <div id="twitter_m">
+           <div id="twitter_container">
+               <ul id="twitter_update_list"></ul>
+           </div>
+        </div>
+        <div id="twitter_b">
   </body>
 </html>
