--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 	<h1>Owen Earl</h1>
-	<h2>I make things.</h2>
+	<a class="twitter-timeline" data-theme="light" href="https://twitter.com/EwonRael?ref_src=twsrc%5Etfw">Tweets by EwonRael</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 	<br><br>
 	<p>
 		<b>Recent Activity<b>
