--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   </head>
   <body>
 	<h1>Owen Earl</h1>
-	<a class="twitter-timeline" data-theme="light" href="https://twitter.com/EwonRael?ref_src=twsrc%5Etfw">Tweets by EwonRael</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
-	<br><br>
+<a class="twitter-timeline"
+      href="https://twitter.com/ewonrael"
+      data-tweet-limit="1">
+Tweets by @ewonrael</a>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<p>
 		<b>Recent Activity<b>
 	</p>
