--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<h1>Owen Earl</h1>
 <a class="twitter-timeline"
       href="https://twitter.com/ewonrael"
-      data-tweet-limit="1">
-Tweets by @ewonrael</a>
+      data-tweet-limit="1"></a>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	<p>
 		<b>Recent Activity<b>
