--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a class="twitter-timeline"
       href="https://twitter.com/ewonrael"
       data-tweet-limit="1"></a>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script async src="twitter.js" charset="utf-8"></script>
 	<p>
 		<b>Recent Activity<b>
 	</p>
