--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   </head>
   <body>
 	<h1>Owen Earl</h1>
-<a class="twitter-timeline"
-      href="https://twitter.com/ewonrael"
-      data-tweet-limit="1"></a>
-<script async src="twitter.js" charset="utf-8"></script>
+	<h2>can't eat money</h2>
 	<p>
 		<b>Recent Activity<b>
 	</p>
