--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2>can't eat money</h2>
 	<hr>
 	<p>
-		<b>Recent Activity<b>
+		<b>Recent Activity</b>
 	</p>
 	<p>
 		<a href="http://activities-index.github.io/">Activities Index</a>
