--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
 	<title>Owen Earl Official Site</title>
 	<link rel="stylesheet" href="https://indestructibletype-fonthosting.github.io/renner.css" type="text/css" charset="utf-8" />
     	<link rel="stylesheet" href="style.css"/>
+	<script>
+    	  var sites = [
+    	     	'/2018/04/09/sparsificationoflanguage.html',
+        	'/2018/02/15/NothinTeaTalkshow.html',
+  	        '/2017/10/01/WhatIWantYoutoKnow.html',
+  	        '/2017/10/01/WalkingwithGratitude.html',
+  	        '/2017/10/01/SomePrayersAreWordless.html',
+  	        '/2017/10/01/SettlingAroundUs.html',
+  	        '/2017/10/01/AtRestAtPiece.html',
+  	        '/2017/07/25/SteelingConversations.html',
+  	        '/1971/11/01/TheTuningMeditation.html',
+  	        '/1971/11/01/TheHeartChant.html',
+  	        '/1971/11/01/EarPiece.html',
+	        '/1971/11/01/26TeachYourselfToFly.html',
+	        '/1971/11/01/25PacificTell.html',
+	        '/1971/11/01/24TelepathicImprov.html',
+	        '/1971/11/01/23Native.html',
+	        '/1971/11/01/22SonicRorschach.html',
+ 	        '/1971/11/01/21RemovingTheDemon.html',
+       		'/1971/11/01/20TheFlamingIndian.html',
+ 	        '/1971/11/01/19EnvironmentalDialogue.html',
+ 	        '/1971/11/01/18TheGreeting.html',
+ 	        '/1971/11/01/17IcebergMelting.html',
+ 	        '/1971/11/01/16X.html',
+ 	        '/1971/11/01/15BowlGong.html',
+  	        '/1971/11/01/14OneWord.html',
+  	        '/1971/11/01/13OneWordII.html',
+  	        '/1971/11/01/12EnergyChanges.html',
+  	        '/1971/11/01/11TumblingSong.html',
+  	        '/1971/11/01/10ZinasCircle.html',
+  	        '/1971/11/01/09XVI.html',
+  	        '/1971/11/01/08EarLy.html',
+          
+ 	     ];
+
+ 	     function randomSite() {
+ 	         var i = parseInt(Math.random() * sites.length);
+	          location.innerHTML = sites[i];
+ 	     }
+  	</script>
   </head>
   <body>
 	<h1>Owen Earl</h1>
-	<h2>can't eat money</h2>
+	<h2 onload="randomSite();">#</h2>
 	<hr>
 	<p>
 		<b>Recent Activity</b>
