--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://indestructibletype-fonthosting.github.io/renner.css" type="text/css" charset="utf-8" />
     	<link rel="stylesheet" href="style.css"/>
 	<script>
-    	  var sites = [
+    	  var tweets = [
     	     	'/2018/04/09/sparsificationoflanguage.html',
         	'/2018/02/15/NothinTeaTalkshow.html',
   	        '/2017/10/01/WhatIWantYoutoKnow.html',
@@ -39,15 +39,16 @@
           
  	     ];
 
- 	     function randomSite() {
- 	         var i = parseInt(Math.random() * sites.length);
-	          location.innerHTML = sites[i];
+ 	     function randomTweet() {
+ 	         var i = parseInt(Math.random() * tweets.length);
+	         document.getElementById("tweets").innerHTML = sites[i];
  	     }
+	     window.onload = randomTweet;
   	</script>
   </head>
   <body>
 	<h1>Owen Earl</h1>
-	<h2 onload="randomSite();">#</h2>
+	<h2 id="tweets">#</h2>
 	<hr>
 	<p>
 		<b>Recent Activity</b>
