--- a/index.html
+++ b/index.html
@@ -7,25 +7,18 @@
   </head>
   <body>
 	<h1>Owen Earl</h1>
-	  <div id="quote"></div>
-  <script>
-    (function() {
-      var quotes = [
-        {
-          text: "text1",
-          img:  "http://i.stack.imgur.com/FqBE6.jpg?s=32&g=1"
-        },
-        {
-          text: "text2",
-          img:  "https://www.gravatar.com/avatar/ca3e484c121268e4c8302616b2395eb9?s=32&d=identicon&r=PG",
-        }
-      ];
-      var quote = quotes[Math.floor(Math.random() * quotes.length)];
-      document.getElementById("quote").innerHTML =
-        '<p>' + quote.text + '</p>' +
-        '<img src="' + quote.img + '">';
-    })();
-  </script>
+	<h2 id="tweet"></h2>
+  	<script>
+  	  (function() {
+	      var tweets = [
+		      "can't eat money",
+		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;"
+	      ];
+	      var quote = quotes[Math.floor(Math.random() * tweets.length)];
+	      document.getElementById("tweet").innerHTML =
+	        quotes;
+	    })();
+	</script>
 	<hr>
 	<p>
 		<b>Recent Activity</b>
