--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;"
 	      ];
 		var i = parseInt(Math.random() * tweets.length);
-        	location.getElementById("tweet").innerHTML = tweets[i];
+        	document.getElementById("tweet").innerHTML = tweets[i];
 	    })();
 	</script>
 	<hr>
