--- a/index.html
+++ b/index.html
@@ -12,7 +12,45 @@
   	  (function() {
 	      var tweets = [
 		      "can't eat money",
-		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;"
+		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;",
+		      "thanks Cornish ❤",
+		      "I'm 🆙deer vague",
+		      "fate privileges the lucky",
+		      "I already solved the mystery but u keep looking for clues",
+		      "don't really want to go to your funeral unless I know that you're going to mine",
+		      "really @slurpeegoblin? <br> Don't follow me thanks.",
+		      "getting upset when people are offended is a type of being offended",
+		      "I'll run to whomever I damn well please during the apocalypse thank you very much",
+		      "please go away @slurpeegoblin",
+		      "I think either consumers are going to have to approach social media the way they do cell service or water, as in it's a utility worth paying for, or governments are going to have to investigate socializing said services, but we can't keep paying for this with our private info",
+		      "Honestly I think John Cage 4"33' is a bit derivative of the Buster Keaton College soundtrack",
+		      "stop saying &quot;no&quot; to yourself",
+		      "no beep boop here, cowboy",
+		      "Hey this is Nicholas Mackelprang. That's all...(Until Next Time)",
+		      "anyone down for a marriage pact?",
+		      "tomato knifes",
+		      "everybody knows something that you don't",
+		      "I'm not going to look both ways before I cross the street because I don't want people thinking I have something to hide",
+		      "prescribe me social movements like drugs",
+		      "I've been doing a lot of street art where I paint different sized rectangles that are close to the original wall color",
+		      "me, an intellectual",
+		      "you ever think about how they say not to put metal inside of a microwave but also the inside of a microwave is made of metal?",
+		      "Mr. Mayor! <br>How could you eat that adorable and talented hamburger? <br>Didn't you see it dancing around?",
+		      "why hello @Fontown_",
+		      "If we're close enough to hurt each other it only means we're close",
+		      "I think everyone's doing their best and sometimes it's worth remembering that",
+		      "oh hello again, jealousy",
+		      "I smile when I think about you",
+		      "just spent time outside... <br>weird place if you ask me",
+		      "wonder how long my measuring tape is",
+		      "I'm beginning to suspect that my monkey has something to hide",
+		      "&quot;song for my twitter followers&quot; is about you, but it's also a little bit about me",
+		      "I've been digging the @NewYorker recently",
+		      "This is art.",
+		      "HOW IM POSTA SPLAIN THAT TO MY CHILDREN?!",
+		      "if you watch two people hug you get like 8% of the benefit of a hug",
+		      "you can't ever be too careful <br>*never does anything*",
+		      "where is your home, tiny man? <br>who paid for those ever-so-stylish pants?",
 	      ];
 		var i = parseInt(Math.random() * tweets.length);
         	document.getElementById("tweet").innerHTML = tweets[i];
