--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		      "if you watch two people hug you get like 8% of the benefit of a hug",
 		      "you can't ever be too careful <br>*never does anything*",
 		      "where is your home, tiny man? <br>who paid for those ever-so-stylish pants?",
+		      "I'm a man of two talents"
 	      ];
 		var i = parseInt(Math.random() * tweets.length);
         	document.getElementById("tweet").innerHTML = tweets[i];
