--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		      "I'll run to whomever I damn well please during the apocalypse thank you very much",
 		      "please go away @slurpeegoblin",
 		      "I think either consumers are going to have to approach social media the way they do cell service or water, as in it's a utility worth paying for, or governments are going to have to investigate socializing said services, but we can't keep paying for this with our private info",
-		      "Honestly I think John Cage 4"33' is a bit derivative of the Buster Keaton College soundtrack",
+		      "Honestly I think John Cage 4&quot;33' is a bit derivative of the Buster Keaton College soundtrack",
 		      "stop saying &quot;no&quot; to yourself",
 		      "no beep boop here, cowboy",
 		      "Hey this is Nicholas Mackelprang. That's all...(Until Next Time)",
