--- a/index.html
+++ b/index.html
@@ -326,6 +326,206 @@
 		      "it was me the whole time lol",
 		      "how come they laugh at me when I go to Whole Foods?",
 		      "I wish I could get a fake identity and do all sorts of illegal stuff with it without jeopardizing my real identity",
+		      "I'm live-tweeting my life",
+		      "welp—",
+		      "I was promised adult themes and language",
+		      "what demons must we be wrestling with to put this here?",
+		      "listening to Ariana Grande's &quot;Bad Decisions&quot; was a mistake",
+		      "bloom of youth",
+		      "when I wake up in the morning I check my own twitter feed",
+		      "this doesn't feel real",
+		      "I was going to do something big and important but nothing's important anymore",
+		      "I am you only different",
+		      "there is always a fire burning somewhere on this planet",
+		      "don't whole-ass it half of the time, half-ass it whole of the time",
+		      "it's funny when you say &quot;I hope you die&quot; people take it as an insult but really immortality would suck because everyone else is mortal",
+		      "100% is less than 4",
+		      "there's so many beautiful people in my life I wish I could call them beautiful without sounding like a NYC catcalling ass-hat",
+		      "I really hope the NSA is reading all my googles because 90% of them are just me trying to get the spelling close enough that google will understand what I meant",
+		      "I still love you today too even",
+		      "oh hon <br>I'd love to join your cult but see here I'm already committed to another cult maybe if this one doesn't work out?",
+		      "tofurkey foturkey",
+		      "I like how Nike tells me to &quot;just do it&quot; and then gives me literally zero instruction on how to do it",
+		      "I'm thinking of starting a club where everyone is a member by default and you have to ask me to not be a member. <br><br>Who's not in?",
+		      "news travels fast by my robots travel faster!",
+		      "I'm here <br>my relationship with the identity of queer is complicated to say the least <br>if that makes you uncomfortable then I relate a little 'cause the whole thing makes me uncomfortable too and I guess we can just act like we don't see each other when we're sharing public spaces",
+		      "I keep falling in love with people on tinder who don't swipe right",
+		      "verschmickled",
+		      "how to opposite investing in twitter and google",
+		      "why does twitter keep tweeting my googles?",
+		      "how come they never write about it in the news papers when theres a news paper writers strike huh?",
+		      "Robbie Santos kinda boy issues with woman",
+		      "im great",
+		      "she was like poetry <br>but not the good kind <br>the bad kind that uses cliché metaphors and then proceeds to explain those metaphors in a way that manages to make things more confusing",
+		      "the internet is wild",
+		      "when will they make a hotdog emoji?",
+		      "...but I really want to have my cake and eat it too...",
+		      "I want instant gratification",
+		      "I'm sorry to all of those of you who follow me on twitter. 😢",
+		      "awe damn it guys stop reading my tweets those are personal",
+		      "history books get a bad rep",
+		      "I used to have the best twitter this side of the Mississippi. Now I don't even have the best twitter this side of the Mississippi.",
+		      "barf handelberg",
+		      "ur*",
+		      "flowsexuals",
+		      "Cigar Yeti",
+		      "I didn't ask for this positivity in my life",
+		      "close, but no cigarette",
+		      "virtue signaling",
+		      "you are my sun you know that you are my star child oh god do I love you",
+		      "straight people confuse me",
+		      "you are a different artist by the time you finish the piece",
+		      "okay but like- how many heroes DO wear capes?",
+		      "you are my love my angle don't treat me like potato",
+		      "I'm not very respectful towards dead people",
+		      "boys",
+		      "gaslighting is when you have diffused overhead lights, especially in warmer colors and dim",
+		      "it bothers me when other people are hypocritical <br><br>like- it's okay when I do it but when others do it it pisses me off",
+		      "I'm awfully judgemental of people for someone who is a people",
+		      "hug me internet",
+		      "Hey Baby are you a hydroponics enthusiast because I'm crap at pickup lines",
+		      "WHUP TEE DOO!!!!!!",
+		      "all those folks sayin kids these days need to read a book and stop playing all those mindless videogames are comparing the video games of today to the best books in the history of books like I think there's a lot more mindless cowboy romance novels than 1984s",
+		      "if your cheese is three men wailing melodramatically over a hot lady to a Chris Isaak song by way of spa music",
+		      "in TV when they have the stupid new guy character who asks all the questions and doesn't understand how things work because that's me right now watching this show",
+		      "I just met you and I love you",
+		      "I think I have nonwhite passing privilege too.",
+		      "there are too many worst people who think they're the best and best people who think they're the worst",
+		      "That sentence started out coherent but the net center on the third of the sword stay is a saturated egg salad.",
+		      "the hardest part of switching to military time is catching that sweet 4:20 snapchat",
+		      "I would make a better president that our current president",
+		      "a lot of things are like nobody's business but not many things are nobody's business",
+		      "shrimp is the closest thing I have to an ex husband",
+		      "I was going to tweet something amazing but I forgot what it was",
+		      "as a music student I have to face the music a lot <br>🙁",
+		      "dogs are weird",
+		      "did you know that I have a twitter?",
+		      "it's important if you're upper middle-class to hire a maid that way you have someone to blame all that random crap that shows up in your house on",
+		      "shouldn't the moon be bouncing the sun's heat? (like a basket ball)",
+		      "rocks r bad for yer teeth",
+		      "good art is murdering your babies",
+		      "the hardest part of being a compulsive liar is that Barack Obama has stopped inviting me to his family dinners",
+		      "put some grey poop on in your holland days sauce bone apple teeth 👌👌👌🙌👃",
+		      "that newish song by Harry Styles is not that good but I suppose that's emblematic of this period In pop music",
+		      "👉😎👉<br>Zoop<br>Edit: what have I done <br><br>– DoofusYoofus",
+		      "the fact that Freud died of assisted suicide after developing mouth cancer due to smoking so many cigars",
+		      "meta",
+		      "either they are both are are or they are both are not",
+		      "don't understand why there's no milk people on twitter",
+		      "think we liked each other so much that we started avoiding each other less we jeopardize our perfect image",
+		      "being in a committed relationship and watching someone other than your partner masturbate and saying it's not cheating is kind of like being vegan and watching someone masturbate and saying it's not cheating",
+		      "im broke lol",
+		      "you can't take the street out of the kid but you CAN take the rotting bird and squirrel carcasses out of the street, @seattledot!",
+		      "if a people do it ain't natural",
+		      "the things I wouldn't do for a million dollars: <br>...<br>well murder a guy for starters",
+		      "there's two kinds of people in this world: people who can count to two and me",
+		      "I think I'm a cup half full but I swear to God the cup's loosing liquid fast and there's nothing we can do to stop it kind of guy",
+		      "if walls could talk they'd probably ask me to stop licking them",
+		      "AVOID EYE CONTACT",
+		      "I'm <br>a <br>Q <br>tip <br>what <br>are <br>you?",
+		      "I don't think it's a productive week unless you've created problems",
+		      "&quot;if you are allergic to cheese then swipe left my friend&quot;",
+		      "I keep mixing up Simon and Garfunkel, Sigmund Freud, Siegfried and Roy, and Gilbert and Sullivan.",
+		      "check the input terminal",
+		      "we equate capitalism with democracy by arguing we have freedom to choose the things we buy and then almost half the smartphones sold are iPhones",
+		      "when you sing into his pink friend",
+		      "the inability to cry is my spirit animal",
+		      "people say &quot;are you sure you could handle fame?&quot; like I can handle not being famous I'm pretty sure I'd be just as dysfunctional, Garrett",
+		      "me: wat?",
+		      "when people say that corporal punishment's okay because look at them they turned out okay <br><br>I don't know man you're literally arguing we should be hitting children I don't know if I'd say you turned out fine",
+		      "I like how gifs loop",
+		      "it must be hard: knowing everyone will either leave you or die",
+		      "lol out loud",
+		      "people come for my politics and then they leave for my politics",
+		      "I love target. I wish they wouldn't kick you out when they close at the end of the day, but I guess it's a necessary evil.",
+		      "if my life was a TV show no one would watch it",
+		      "I hate Twitter. They ruined twitter.",
+		      "I'm too old for this crap",
+		      "I only read my own tweets",
+		      "I hate how critical I am of myself",
+		      "Case's Farm Fresh <be>Delicata Squash <br>Product of USA <be>PLU 4763 <be>Bill Case Farms 🞄 Albany, OR 97321",
+		      "my mom made me throw out all my rope before going to college",
+		      "🎵it's beginning to look a lot like homicide🎵",
+		      "hey @NutellaUSA you're the reason my children won't eat my waffles for breakfast anymore my kid gerb passed out in kindergarten due to mal nutrition and valerie has stopped taking to me!",
+		      "I want to sleep in an aerated coffin.",
+		      "PRLBLEMS",
+		      "&quot;I don't always watch bot generated content from a nightmarish dystopia, but when I do, I want it to teach me colors.&quot;",
+		      "the stakes where hight, but not as hight as my auto insurance premiums",
+		      "I can't tell if the world needs more or less horny teenagers",
+		      "I wonder how many times the world has ended",
+		      "where is my screwdriver <br>?",
+		      "to design and create is to participate in a part of humanity that stretches beyond history",
+		      "We want to be understood but we also want to be special",
+		      "at segregated rooms providing privacy, I was lead into and open wearhouse like room where people of all conditions sat, hostage to their bed",
+		      "ere in her chair, frustrated with her situation, but unwilling to leave her seated position to search the floor around her. Perhaps this was",
+		      "ad encouraged him over the phone to wear something casual, comfortable, advise which he was regretting following. Finding the sweet pants un",
+		      "It must have been important to him, otherwise he wouldn't feel it in the back of his mind, the almost physical sensation of an emotional kno",
+		      "I don't need everyone to like me. <br><br>I just need everyone to do a really good job pretending they like me.",
+		      "There are plenty of people to go around",
+		      "Uhhhh, <br>The 1990s called and I'm feeling really conflicted about whether or not I should tell them about 9/11."
+		      "Some people matter so little to me that I'm not even going to name characters after them in my book",
+		      "If we all got amnesia at the same time with anyone even notice?!? ?",
+		      "@TheRealMrGabeNewman get out of my kitchen",
+		      "I'm confused",
+		      "this movie is so scripted",
+		      "I live off of milk and ego",
+		      "I'm normal",
+		      "Get 'er done!",
+		      "If this your is teacher 4th grade and school you teachers for she can.",
+		      "I want Twitter notifications for when I tweet something, and I don't want notifications for when other people tweet something.",
+		      "People keep explaining prices in terms of cups of coffee, but a cup of coffee seems to cost anywhere between $2 and $15",
+		      "Everything is concept art",
+		      "Juggy Brotelheigm",
+		      "Is art just bad?",
+		      "I can't even",
+		      "They say you should cut unhealthy relationships out of your life, but then I would only have like two friends",
+		      "nothing really matters",
+		      "✌✊✌ sarcasm quotes ✌✊✌",
+		      "DRAIN THE LIZARD",
+		      "WE MISS U SMOOTH LIPS",
+		      "is dork: no light",
+		      "Did you think I wouldn't notice? <br><br>No, you thought I would pretend I didn't notice.",
+		      "I hope it rains",
+		      "&quot;We are disturbed and desperate people&quot;",
+		      "ICU",
+		      "The fact that my left footstep sounds different than my right footstep is more concerning to me than I care to admit.",
+		      "I like it when people say things and then when you respond they tell you to be quiet. <br><br>Just kidding I don't actually like that.",
+		      "I like the number 6 but it's not my favorite or anything",
+		      "Change makes me uncomfortable",
+		      "What is this even?",
+		      "If it weren't for belts I wouldn't have any idea what belt loops are for!",
+		      "If only mustard was as good in other food as other food is good in mustard",
+		      "If you only knew",
+		      "The trick- too good scrambled eggs, it's not screw a mop, Garrett",
+		      "If it's stupid, but it works, maybe it's still stupid",
+		      "It was all a crazed drug trip is the new it was all a dream",
+		      "I would say I'm a fan but tbh I'm not a fan of everything",
+		      "This idea is not fleshed out yet",
+		      "Yeah I can recognize it a mile away (Assuming there are good binoculars provided)",
+		      "if you're going to cast me in your life story at least give me a part that's less cliché",
+		      "I changed my mind",
+		      "Whenever I get water at like a restaurant or whatever, I make sure to ask them for half the usual ice. That way I get more water.",
+		      "Existing sure is an expensive habit",
+		      "Gift but catch",
+		      "💕",
+		      "Newton's flaming laser sword",
+		      "I think if twitter ever decides to get a mascot it should be a bird 🐦🐦",
+		      "🎵Trading Spaces!🎵";
+		      "Hey I met you a little while ago <br><br>And this is really not that crazy in the grand scheme of things",
+		      "Google is practically a llama Farm",
+		      "LPT jokes work better if other people get the joke",
+		      "/s",
+		      "People who didn't register to vote are the reason there are so many unregistered voters in this country!",
+		      "I only do things that are natural",
+		      "Well it's Thursday, and there's nothing I or the United States government can do about it",
+		      "Ever come up with what you thought was a new idea only to Google it and find out that they've already made a porn parody of it?",
+		      "our poor bottoms, the butt of practically every joke",
+		      "t*rkey",
+		      "When I hear two pieces of metal banging together I think of SCJohnson, a family company",
+		      "must've been hard makin sure people tryin buy alcohol're 21 before they invented numbers",
+		      "Don't be starting things you",
+		      "Can we have a national going back into the closet I take it back day?",
+		      "Bring those mittens next time you come out",
 	      ];
 		var i = parseInt(Math.random() * tweets.length);
         	document.getElementById("tweet").innerHTML = tweets[i];
