--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
 		      "Uhhhh, <br>The 1990s called and I'm feeling really conflicted about whether or not I should tell them about 9/11."
 		      "Some people matter so little to me that I'm not even going to name characters after them in my book",
 		      "If we all got amnesia at the same time with anyone even notice?!? ?",
+		      "@TheRealMrGabeNewman get out of my kitchen",
 		      "I'm confused",
 		      "this movie is so scripted",
 		      "I live off of milk and ego",
@@ -509,7 +510,7 @@
 		      "💕",
 		      "Newton's flaming laser sword",
 		      "I think if twitter ever decides to get a mascot it should be a bird 🐦🐦",
-		      "🎵Trading Spaces!🎵";
+		      "🎵Trading Spaces!🎵",
 		      "Hey I met you a little while ago <br><br>And this is really not that crazy in the grand scheme of things",
 		      "Google is practically a llama Farm",
 		      "LPT jokes work better if other people get the joke",
