--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
 		      "It must have been important to him, otherwise he wouldn't feel it in the back of his mind, the almost physical sensation of an emotional kno",
 		      "I don't need everyone to like me. <br><br>I just need everyone to do a really good job pretending they like me.",
 		      "There are plenty of people to go around",
+		      "Uhhhh, <br>The 1990s called and I'm feeling really conflicted about whether or not I should tell them about 9&#47;11.",
 		      "Some people matter so little to me that I'm not even going to name characters after them in my book",
 		      "If we all got amnesia at the same time with anyone even notice?!? ?",
 		      "@TheRealMrGabeNewman get out of my kitchen",
