--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 		      "I need there to be bluegrass cover of literally every song",
 		      "I like to spy on bird watchers",
 		      "sometimes I pretend to be bad at things so that when I'm actually bad things people might think it's a joke",
-		      "him: &quot;I'm into bad boys<br>&quot; me: *commits voter fraud*",
+		      "him: &quot;I'm into bad boys&quot; <br>me: *commits voter fraud*",
 		      "I'm trying to get into shape but I ain't never told you which shape",
 		      "thanks",
 		      "I am so covetous. I need two googly eyes for a Sunday school project and there isn’t a googly eye in all of Mt Shasta.",
