--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 		<a href="http://indestructibletype.com/Gnomon">Gnomon*</a>
 	</p>
 	<p>
-		<a href="https://youtu.be/ohoT8Cdd6mI">Song to my Twitter Followers</a>
+		<a href="https://drive.google.com/uc?export=download&id=1YVzBHrQirZ3q_WjB91jhQB1BfW0XNqos">Aesthetic Responses to Repetition in Unfamiliar Music</a>
 	</p>
   </body>
 </html>
