--- a/snapchat.html
+++ b/snapchat.html
@@ -1,1 +1,1 @@
-<img src="snapcode.svg" alt="Girl in a jacket" style="width: 99%;"> 
+<img src="snapcode.svg" alt="Girl in a jacket" style="width: 70%; text-align: center;"> 
