--- a/index.html
+++ b/index.html
@@ -610,6 +610,9 @@
 		<a href="https://ewonrael.bandcamp.com/album/simple-sabotage-field-manual">Simple Sabotage Field Manual</a>
 	</p>
 	<p>
+		<a href="snapchat.html">SnapChat</a>
+	</p>
+	<p>
 		<a href="https://youtu.be/ohoT8Cdd6mI">Song for my Twitter Followers</a>
 	</p>
 	<p>
