--- a/snapchat.html
+++ b/snapchat.html
@@ -1,1 +1,6 @@
-<img src="snapcode.svg" alt="Girl in a jacket" style="width: 70%; text-align: center;"> 
+<!DOCTYPE html>
+<html>
+  <body style="text-align: center;">
+    <img src="snapcode.svg" alt="Girl in a jacket" style="width: 70%; text-align: center;"> 
+  </body>
+</html>
