--- a/snapchat.html
+++ b/snapchat.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="text-align: center;">
-    <img src="snapcode.svg" alt="Girl in a jacket" style="width: 50%; text-align: center;"> 
+    <img src="snapcode.svg" alt="
+    There once was a man from Nantucket / Who kept all his cash in a bucket. / But his daughter, named Nan, / Ran away with a man / And as for the bucket, Nantucket." style="width: 50%; text-align: center;"> 
   </body>
 </html>
