--- a/index.html
+++ b/index.html
@@ -618,5 +618,9 @@
 	<p>
 		<a href="https://twitter.com/EwonRael">Twitter</a>
 	</p>
+	<br><br>
+	<p>
+		<b>Made with Love By Owen Earl</b>
+	</p>
   </body>
 </html>
