--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<script>
 	(function() {
 	      var tweets = [
+		      "check out my new website",
 		      "can't eat money",
 		      "fill in the blank: <br>&quot;okay gang, let's split up and look for ______&quot;",
 		      "thanks Cornish ❤",
