--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         	document.getElementById("tweet").innerHTML = tweets[i];
 	    })();
 	</script>
-	<hr>
+	<hr><br>
 	<p>
 		<b>Recent Activity</b>
 	</p>
@@ -585,6 +585,9 @@
 	</p>
 	<p>
 		<a href="http://indestructibletype.com/">indestructible type*</a>
+	</p>
+	<p>
+		<a href="https://www.instagram.com/EwonRael/">Instagram</a>
 	</p>
 	<p>
 		<a href="https://youtu.be/6sPEavkcXfk">Interview with John Cage on Silence</a>
