--- a/Zeros/titlepage.html
+++ b/Zeros/titlepage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-  <p>ZEROS<p>
+  	<p>ZEROS<p>
+	<p>Hi there...</p>
   </body>
 </html>
