--- a/Zeros/titlepage.html
+++ b/Zeros/titlepage.html
@@ -5,18 +5,17 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"/>
 	<script>
-		$('.selector ul li').click( function() {
-  $('.selector ul li').removeClass('selected');
-  $(this).addClass('selected');
-});
-$(document).ready(function () {
-    $('.selector').mousewheel(function(e, delta) {
-        this.scrollLeft -= (delta * 40);
-        e.preventDefault();
-    });
-    
-    });
+$(function() {
 
+   $("body").mousewheel(function(event, delta) {
+
+      this.scrollLeft -= (delta * 30);
+
+      event.preventDefault();
+
+   });
+
+});
 	</script>
   </head>
   <body>
