--- a/Zeros/titlepage.html
+++ b/Zeros/titlepage.html
@@ -4,19 +4,9 @@
 	<title>Zeros</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"/>
-	<script>
-$(function() {
-
-   $("body").mousewheel(function(event, delta) {
-
-      this.scrollLeft -= (delta * 30);
-
-      event.preventDefault();
-
-   });
-
-});
-	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="jquery.mousewheel.min.js.pagespeed.jm.jfOY7xKcOw.js"></script>
+	<script>$(document).ready(function(){$('html, body, *').mousewheel(function(e,delta){this.scrollLeft-=(delta*40);e.preventDefault();});});</script>
   </head>
   <body>
   	<p>ZEROS<p>
