--- a/Zeros/titlepage.html
+++ b/Zeros/titlepage.html
@@ -9,7 +9,7 @@
 	<script>$(document).ready(function(){$('html, body, *').mousewheel(function(e,delta){this.scrollLeft-=(delta*40);e.preventDefault();});});</script>
   </head>
   <body>
-  	<p>ZEROS<p>
+	<div><p>ZEROS<p></div>
 	<p>     I’m not a scientist. I’m an ethicist. 
 Science is like war, I think, although I’ve never been in a war. We sit around and train, and think, and prepare for what we think we will need to prepare for. We think about what we don’t think we will need to prepare for, and we try to prepare for that too. It becomes something of a system-- a routine. If we can quantify the unknown then it isn’t so scary. 
 Barbara tells me that when the first nuclear bomb was detonated, people didn’t know if it would ever stop. She’s an old woman with a history and a Brooklyn accent. We’re sitting outside for brunch under a tree, and she’s smiling at me matter-of-factly. She explains that a nuclear bomb uses pieces of atoms. When they collide into other atoms, pieces of those atoms fly off and run into more atoms. 
