--- a/Zeros/story.html
+++ b/Zeros/story.html
@@ -9,7 +9,7 @@
 	<script>$(document).ready(function(){$('html, body, *').mousewheel(function(e,delta){this.scrollLeft-=(delta*40);e.preventDefault();});});</script>
   </head>
   <body>
-	<div><p>ZEROS</p></div><p></p>
+	<div>ZEROS</div>
 	<p>&nbsp;&nbsp;&nbsp; I&rsquo;m not a scientist. I&rsquo;m an ethicist. </p>
 	<p>&nbsp;&nbsp;&nbsp; Science is like war, I think, although I&rsquo;ve never been in a war. We sit around and train, and think, and prepare for what we think we will need to prepare for. We think about what we don&rsquo;t think we will need to prepare for, and we try to prepare for that too. It becomes something of a system-- a routine. If we can quantify the unknown then it isn&rsquo;t so scary. </p>
 	<p>&nbsp;&nbsp;&nbsp; Barbara tells me that when the first nuclear bomb was detonated, people didn&rsquo;t know if it would ever stop. She&rsquo;s an old woman with a history and a Brooklyn accent. We&rsquo;re sitting outside for brunch under a tree, and she&rsquo;s smiling at me matter-of-factly. She explains that a nuclear bomb uses pieces of atoms. When they collide into other atoms, pieces of those atoms fly off and run into more atoms. </p>
