--- a/index.html
+++ b/index.html
@@ -622,6 +622,9 @@
 	<p>
 		<a href="https://twitter.com/EwonRael">Twitter</a>
 	</p>
+	<p>
+		<a href="https://ewonrael.github.io/Zeros/story">ZEROS</a>
+	</p>
 	<br><br>
 	<p>
 		<b>Made with Love By Owen Earl</b>
