--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
 		<a href="https://twitter.com/EwonRael">Twitter</a>
 	</p>
 	<p>
-		<a href="https://ewonrael.github.io/Zeros/story">ZEROS</a>
+		<a href="https://ewonrael.github.io/Zeros/story">Zeros</a>
 	</p>
 	<br><br>
 	<p>
